changes to menu and color

--- a/css/style.css
+++ b/css/style.css
@@ -6244,7 +6244,7 @@ textarea {
     margin-right: 5px;
 }
 .v3-add-bus {} .v3-menu-sign {
-    background-color: #263a78;
+    background-color: #267745;
 }
 .v3-mob-top-menu {
     display: none;
